# cts

./: .gitignore  AGENTS.md  Makefile  README.md
.codex/: config.toml
.github/ISSUE_TEMPLATE/: epic.yml  task.yml
.github/codex/prompts/: implement_issue.md  review.md
.github/workflows/: ci.yml  codex_pr_review.yml
backend/: Dockerfile  pyproject.toml
backend/sql/: schema.sql
backend/src/app/: main.py
backend/src/app/api/: router.py
backend/src/app/api/routes/: documents.py  export.py  generation.py  history.py  knowledge.py  parsing.py  quality.py  references.py  workflow.py
backend/src/app/core/: db.py  init_db.py
backend/src/app/export/: xlsx_export.py
backend/src/app/generation/: actions.py  arbitration.py  engine.py  extensions.py  impact.py
backend/src/app/knowledge/: history.py  store.py  workflow.py
backend/src/app/parsing/: __init__.py  excel.py  word.py
backend/src/app/quality/: gates.py
backend/tests/: conftest.py  helpers.py  test_documents.py  test_excel_parser.py  test_generation_quality_export.py  test_health.py  test_knowledge_crud.py  test_parse_profiles.py  test_references.py  test_word_parser.py  test_workflow_impact_history_extensions.py
docker/: docker-compose.yml
docs/planning/: milestones-and-issues.md
docs/specs/: 01-data-model-schema.md  02-parsing-reference.md  03-generation-quality-export.md  README.md
scripts/: create_milestones_issues.sh
