[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster-test-mgmt-backend"
version = "0.1.0"
description = "Backend service for cluster test management"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "openpyxl>=3.1.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
